--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"/>
-    <link rel="stylesheet" href="./css/ctyles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"/>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="page-header">
@@ -37,16 +37,19 @@
     </header>
     <main>
         <section class="hero">
+            <div class="container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button class="hero-button" type="button">Order Service</button>
+            </div>
         </section>
 
-        <section class="feactures">
+        <section class="features">
+            <div class="container">
             <div class="visually-hidden">
             <h2>.</h2>
             </div>
             <ul class="feature-list">
-                <li class="feature.item">
+                <li class="feature-item">
                     <h3 class="feature-title">Strategy</h3>
                     <p class="feature-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
@@ -63,9 +66,11 @@
                     <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
+        </div>
         </section>
 
         <section class="team">
+            <div class="container">
             <h2 class="our-team">Our Team</h2>
             <ul class="team-list">
                 <li class="team-item">
@@ -117,9 +122,11 @@
                 </div>
                 </li>
             </ul>
+        </div>
         </section>
 
         <section class="portfolio">
+            <div class="container">
             <h2 class="our-portfolio">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
@@ -194,7 +201,7 @@
                     <p class="portfolio-type">Marketing</p>
                 </div>
                 </li>
-
+            </div>
             </ul>
         </section>
     </main>
