--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="page-header">
-    <div class="container">
+    <div class="container nav-container">
         <nav class="navigation" >
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul class="nav-list">
